* Fix - Events not up to date after updating calendar settings * Fix - EventLimit link sometimes didn't appear on month view if the calendar's height was too small

--- a/css/global.css
+++ b/css/global.css
@@ -101,7 +101,8 @@
 .bookacti-picked-event .fc-bg	{ opacity: 0.5; transition: opacity 0.2s; }
 .bookacti-picked-event			{ border-width: 2px; z-index: 15 !important; transition: border 0.2s; }
 
-.bookacti-calendar .fc-basic-view .fc-content > * { display: block; }
+.bookacti-calendar .fc-basicWeek-view .fc-event .fc-time,
+.bookacti-calendar .fc-basicDay-view .fc-event .fc-time { display: block; }
 .bookacti-calendar .fc-basic-view .fc-content-skeleton tr { background-color: transparent !important; }
 
 .fc-popover .fc-widget-content { max-height: 300px; overflow-y: auto; }
